2017-07-04  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* server/GdbServer.cpp (GdbServer::rspCommand): Add "monitor
	cyclecount".
	* targets/ri5cy/Ri5cyImpl.h: Correct name of DBG_HIT_SSTH from
	DBG_HIT_SSTE.

2017-07-04  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* targets/ri5cy/Ri5cyImpl.cpp (Ri5cyImpl::stepInstr): Write
	DBG_CTRL after flushing pipeline.
	(Ri5cyImpl::runToBreak): Compute value for DBG_CTRL before
	flushing the pipeline, so can write DBG_CTRL in the next cycle.

2017-07-03  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* targets/ri5cy/Ri5cyImpl.cpp (Ri5cyImpl::runToBreak): Tried a
	different sequence.

2017-07-03  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	This implementation provides a way to resume continuously, but
	does not yet work with the RI5CY implementation. It seems the
	pipeline does not get fully flushed.

	* server/GdbServer.cpp (GdbServer::rspRemoveMatchpoint)
	(GdbServer::rspInsertMatchpoint): Just return empty packets, so
	GDB does breakpoints by steam.
	* targets/ri5cy/Ri5cyImpl.cpp (Ri5cyImpl::readRegister)
	(Ri5cyImpl::writeRegister): Warn rather than abort if asked for
	unkown registers, this is a GDB problem.
	(Ri5cyImpl::stepInstr): Write NPC first to flush pipeline.
	(Ri5cyImpl::runToBreak): Implementation provided, but does not yet
	work.

2017-07-03  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* targets/picorv32/Picorv32Impl.cpp: Unify header inclusion.
	* targets/ri5cy/Ri5cyImpl.cpp: Remove std::chrono:: namespace
	qualifiers throughout, covered by using declarations.
	(Ri5cyImpl::resetModel): Set the DBG_IE reg to trap on breakpoint
	and illegal instruction.
	(Ri5cyImpl::haltModel): Rewrite using waitForHalt.
	(Ri5cyImpl::waitForHalt): Created.
	(Ri5cyImpl::stepInstr): Rewritten to write the NPC to flush the
	pipeline.
	* targets/ri5cy/Ri5cyImpl.h (class Ri5cyImple): Add constants for
	DBG_IE fields and waitForHalt method.

2017-07-08  Jeremy Bennett  <jeremy.bennett@embecosm.com>
